--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h2>Research Interest</h2>
             <p class="job-description">
-              P2P Network, Cybersecurity, Machine Learning, Neural Network, Cloud Computing.
+              ML, DL, BCI, Neuroscience, P2P Communication.
             </p>
             <div class="row">
               <div class="col-lg-10">
@@ -142,7 +142,7 @@
                 <ul>
                   <li class="job-description">
                     <i class="icofont-rounded-right"></i>
-                    <strong>Simulator:</strong> CloudSim.
+                    <strong>Simulator:</strong> CloudSim, omnet++.
                   </li>
                   <li>
                     <i class="icofont-rounded-right"></i><strong>Language:</strong> C/C++, Java, Python, HTML,
@@ -154,16 +154,16 @@
                   </li>
                   <li>
                     <i class="icofont-rounded-right"></i>
+                    <strong>ML:</strong> Matplotlib, Tensorflow, Keras, Sklearn, NLTK, Pandas, Numpy
+                  </li>
+                  <li>
+                    <i class="icofont-rounded-right"></i>
                     <strong> IDE:</strong> Spyder, Colab, Jupyter Notebook,
                     Code Blocks, Dev-C++, PyCharm.
                   </li>
                   <li>
                     <i class="icofont-rounded-right"></i>Have strong knowledge
                     in android app development with java.
-                  </li>
-                  <li>
-                    <i class="icofont-rounded-right"></i>Have strong knowledge
-                    in Machine learning with python.
                   </li>
                   <li>
                     <i class="icofont-rounded-right"></i>Proficient in Latex.
@@ -192,6 +192,29 @@
             <h4><strong>Journal Articles</strong></h4>
           </div>
           <div class=" border border-primary col-lg-12 shadow-sm">
+
+            <div class="">
+              <div class="job-description p-2 ">
+                <p>
+                  [1]. <strong>Saydul Akbar Murad</strong>, Nick Rahimi <strong> “Secure and Efficient Hierarchical P2P Fog Architecture:
+                     A Novel Approach for IoT” </strong> IEEE Internet of Things Journal. <strong> (IF 10.6) </strong>
+
+                </p>
+              </div>
+              <div>
+                <div class="pdf-button ">
+                  <button onClick="openTab(this)" href="#" name="assets/files/j-1.pdf" type="button"
+                    class="btn btn-sm btn-outline-dark pdf-btn pl-4 pr-4 mb-2">
+                    Pdf
+                  </button>
+                  <button type="button" class="btn btn-sm link-btn btn-outline-success pl-4 pr-4 mb-2">
+                    <a
+                      href="https://ieeexplore.ieee.org/abstract/document/10433068">Link</a>
+                  </button>
+                </div>
+              </div>
+            </div>
+
             <div class="">
               <div class="job-description p-2 ">
                 <p>
