--- a/index.html
+++ b/index.html
@@ -215,6 +215,34 @@
               </div>
             </div>
 
+
+            <div class="">
+              <div class="job-description p-2 ">
+                <p>
+                  [1]. <strong>Saydul Akbar Murad</strong>, Zafril Rizal M Azmi, Abu Jafar Md Muzahid,
+                   Md Murad Hossain Sarker, M Saef Ullah Miah, 
+                  MD Khairul Bashar Bhuiyan, Nick Rahimi, Anupam Kumar Bairagi <strong> “Priority based job scheduling technique 
+                    that utilizes gaps to increase the efficiency of job distribution in 
+                    cloud computing” </strong> Sustainable Computing: Informatics
+                     and Systems. <strong> (IF 4.5) </strong>
+
+                </p>
+              </div>
+              <div>
+                <div class="pdf-button ">
+                  <button onClick="openTab(this)" href="#" name="assets/files/j-1.pdf" type="button"
+                    class="btn btn-sm btn-outline-dark pdf-btn pl-4 pr-4 mb-2">
+                    Pdf
+                  </button>
+                  <button type="button" class="btn btn-sm link-btn btn-outline-success pl-4 pr-4 mb-2">
+                    <a
+                      href="https://www.sciencedirect.com/science/article/pii/S2210537923000975">Link</a>
+                  </button>
+                </div>
+              </div>
+            </div>
+
+
             <div class="">
               <div class="job-description p-2 ">
                 <p>
