--- a/index.html
+++ b/index.html
@@ -96,9 +96,13 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Saydul Akbar Murad</h1>
-      <p>
-        Graduate Research Assistant at The University of Southern Mississippi
-      </p>
+      <div style="text-align: center; color: white;">
+        <strong> 
+        Graduate Research Assistant<br>
+        School of Computing Sciences and Computer Engineering<br>
+        The University of Southern Mississippi
+      </strong>
+    </div>    
     </div>
   </section>
 
@@ -179,6 +183,23 @@
             <h6> <a href=""><strong>saydulakbarmurad@gmail.com</strong></a></h6>
             <h6> <a href=""><strong>saydulakbar.murad@usm.edu</strong></a></h6>
           </div>
+        </div>
+        <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+        
+          <div class="section">
+            <h5>Education</h5>
+          </div>
+          <ul>
+            <li>
+              PhD in Computer Science, University of Southern Mississippi, USA, <strong>Running</strong>
+            </li>
+            <li>
+              MSc in Computer Science, University Malaysia Pahang, Malaysia, <strong>2023</strong> 
+            </li>
+            <li>
+              BSc in Information & Communication Eng., Noakhali Science & Tech. Univ., Bangladesh <strong>2020</strong>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
@@ -1083,6 +1104,12 @@
                 </div>
                 <ul>
                   <li class="voluntary-li"> 
+                    <strong>Oral Presentation</strong>, at 2023 10th International Conference on Internet of Things: Systems, Management and Security (IOTSMS), USA.
+                  </li>
+                  <li class="voluntary-li"> 
+                    <strong>Oral Presentation</strong>, at 8th International Conference on Software Engineering \& Computer Systems 2023, Malaysia.
+                  </li>
+                  <li class="voluntary-li"> 
                     <strong>Oral Presentation</strong>, at 38th International Conference on Computers and Their Applications, USA.
                   </li>
                   <li class="voluntary-li"> 
@@ -1095,12 +1122,6 @@
                   <li class="voluntary-li">
                     <strong>Oral Presentation</strong>, at 7th INTERNATIONAL CONFERENCE ON SOFTWARE
                     ENGINEERING & COMPUTER SYSTEM (ICSECS – 2021), UMP, Pahang, Malaysia.
-                    Journal of Experimental & Theoretical Artificial Intelligence
-                  </li>
-                  <li class="voluntary-li">
-                    <strong>oral presentation</strong>, seminar on "In-Depth of Artificial Intelligence & Machine Learning"
-                    at Department of Information and Communication Engineering, NSTU, Noakhali, 15
-                    March, 2020.
                   </li>
                   <li class="voluntary-li">
                     <strong>Workshops Research and Academic Career</strong>. Conducted by UniV Summer School
