--- a/index.html
+++ b/index.html
@@ -220,7 +220,29 @@
             <div class="">
               <div class="job-description p-2 ">
                 <p>
-                  [1]. <strong>Saydul Akbar Murad</strong>, Nick Rahimi <strong> “Secure and Efficient Hierarchical P2P Fog Architecture:
+                  [1]. <strong>Saydul Akbar Murad</strong>, Nick Rahimi <strong> “Unveiling Thoughts: 
+                    A Review of Advancements in EEG Brain Signal Decoding into Text” </strong> IEEE Transactions 
+                    on Cognitive and Developmental Systems. (2024) <strong> (IF 5) </strong>
+                </p>
+              </div>
+              <div>
+                <div class="pdf-button ">
+                  <button onClick="openTab(this)" href="#" name="assets/files/j-1.pdf" type="button"
+                    class="btn btn-sm btn-outline-dark pdf-btn pl-4 pr-4 mb-2">
+                    Pdf
+                  </button>
+                  <button type="button" class="btn btn-sm link-btn btn-outline-success pl-4 pr-4 mb-2">
+                    <a
+                      href="https://ieeexplore.ieee.org/document/10681319">Link</a>
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <div class="">
+              <div class="job-description p-2 ">
+                <p>
+                  [2]. <strong>Saydul Akbar Murad</strong>, Nick Rahimi <strong> “Secure and Efficient Hierarchical P2P Fog Architecture:
                      A Novel Approach for IoT” </strong> IEEE Internet of Things Journal. (2024) <strong> (IF 10.6) </strong>
 
                 </p>
@@ -243,7 +265,7 @@
             <div class="">
               <div class="job-description p-2 ">
                 <p>
-                  [2]. <strong>Saydul Akbar Murad</strong>, Zafril Rizal M Azmi, Abu Jafar Md Muzahid,
+                  [3]. <strong>Saydul Akbar Murad</strong>, Zafril Rizal M Azmi, Abu Jafar Md Muzahid,
                    Md Murad Hossain Sarker, M Saef Ullah Miah, 
                   MD Khairul Bashar Bhuiyan, Nick Rahimi, Anupam Kumar Bairagi <strong> “Priority based job scheduling technique 
                     that utilizes gaps to increase the efficiency of job distribution in 
@@ -270,7 +292,7 @@
             <div class="">
               <div class="job-description p-2 ">
                 <p>
-                  [3]. <strong>Saydul Akbar Murad</strong>, Zafril Rizal M Azmi, Abu Jafar Md Muzahid, 
+                  [4]. <strong>Saydul Akbar Murad</strong>, Zafril Rizal M Azmi, Abu Jafar Md Muzahid, 
                   MD Khairul Bashar Bhuiyan, Md Saib, Nick Rahimi, Nusrat Jahan Prottasha, Anupam Kumar 
                   Bairagi <strong> “SG-PBFS: Shortest Gap-Priority Based Fair Scheduling 
                     technique for job scheduling in cloud environment” </strong> Future Generation Computer Systems. (2024) <strong> (IF 7.5) </strong>
@@ -294,7 +316,7 @@
             <div class="">
               <div class="job-description p-2 ">
                 <p>
-                  [4]. KM Aslam Uddin, Farida Siddiqi Prity, Maisha Tasnim, Sumiya Nur Jannat, Mohammad Omar 
+                  [5]. KM Aslam Uddin, Farida Siddiqi Prity, Maisha Tasnim, Sumiya Nur Jannat, Mohammad Omar 
                   Faruk, Jahirul Islam, <strong> Saydul Akbar Murad </strong>, Apurba Adhikary, Anupam Kumar 
                   Bairagi <strong> “Machine Learning-Based Screening Solution for COVID-19 Cases 
                     Investigation: Socio-Demographic and Behavioral Factors Analysis and COVID-19 
@@ -319,7 +341,7 @@
             <div class="">
               <div class="job-description p-2 ">
                 <p>
-                  [5]. Md Bipul Hossain, Anika Shama, Apurba Adhikary, Avi Deb Raha, KM Aslam Uddin, 
+                  [6]. Md Bipul Hossain, Anika Shama, Apurba Adhikary, Avi Deb Raha, KM Aslam Uddin, 
                   Mohammad Amzad Hossain, Imtia Islam, <strong>Saydul Akbar Murad </strong>, Md Shirajum Munir, 
                   Anupam Kumar Bairagi <strong> “An Explainable Artificial Intelligence Framework for the 
                   Predictive Analysis of Hypo and Hyper Thyroidism Using Machine Learning Algorithms
@@ -344,7 +366,7 @@
             <div class="">
               <div class="job-description p-2 ">
                 <p>
-                  [6]. Chandra Shekhar Kundu, Apurba Adhikary, Md Shamim Ahsan, Abidur Rahaman, 
+                  [7]. Chandra Shekhar Kundu, Apurba Adhikary, Md Shamim Ahsan, Abidur Rahaman, 
                   Md Bipul Hossain, Avi Deb Raha, <strong> Saydul Akbar Murad </strong>, Farid Ahmed <strong> “Design and analysis of performance 
                   parameters for achieving high efficient ITO/PEDOT: PSS/P3HT: PCBM/Al organic solar cell
                   ” </strong> Journal of Optics. (2023) <strong> (IF 1.8) </strong>
@@ -367,7 +389,7 @@
 
             <div class="job-description p-2 ">
               <p>
-                [7]. Nusrat Jahan Prottasha, <strong> Saydul Akbar Murad</strong>, Abu Jafar Md Muzahid, 
+                [8]. Nusrat Jahan Prottasha, <strong> Saydul Akbar Murad</strong>, Abu Jafar Md Muzahid, 
                 Masud Rana, Md Kowsher, Apurba Adhikary, Sujit Biswas, Anupam Kumar Bairagi  <strong> “Impact learning: 
                   A learning method from features impact and competition” In </strong> Journal of Computational Science. (2023)
                    <strong>(IF 3.817) </strong>
@@ -390,7 +412,7 @@
             <div class="">
               <div class="job-description p-2 ">
                 <p>
-                  [8]. Abu Jafar Md Muzahid, Syafiq Fauzi Kamarulzaman,
+                  [9]. Abu Jafar Md Muzahid, Syafiq Fauzi Kamarulzaman,
                   Md Arafatur Rahman, <strong> Saydul Akbar Murad</strong>, Md Abdus Samad Kamal and Ali H Alenezi <strong> “Multiple vehicle cooperation
                   and collision avoidance in automated vehicles: 
                   survey and an AI-enabled conceptual framework” </strong> Scientific Reports. (2023) <strong>(IF 4.996) </strong>
@@ -414,7 +436,7 @@
             <div class="">
               <div class="job-description p-2 ">
                 <p>
-                  [9]. Israt Jahan, K. M. Aslam Uddin,
+                  [10]. Israt Jahan, K. M. Aslam Uddin,
                   <strong>Saydul Akbar Murad</strong>, M. Saef Ullah Miah,
                   Tanvir Zaman Khan, Mehedi Masud, Sultan Aljahdali and Anupam Kumar Bairagi  <strong> “4D: A Real-Time Driver
                   Drowsiness Detector
@@ -439,7 +461,7 @@
             <div class="">
               <div class="job-description p-2 ">
                 <p>
-                  [10]. <strong>Saydul Akbar Murad</strong>, Abu Jafar Md
+                  [11]. <strong>Saydul Akbar Murad</strong>, Abu Jafar Md
                   Muzahid, and Zafril Rizal Bin M Azmi <strong> “A Review on Job
                   Scheduling Technique in Cloud Computing and Priority Rule
                   Based Intelligent Framework” </strong> Journal of King Saud
@@ -465,7 +487,7 @@
             <div class="">
               <div class="job-description p-2 ">
                 <p>
-                  [11]. Nusrat Jahan Prottasha, Abdullah Sami, MD Kowsher,
+                  [12]. Nusrat Jahan Prottasha, Abdullah Sami, MD Kowsher,
                   <strong>Saydul Akbar Murad</strong>, Anupam Kumar Bairagi,
                   Mehedi Masud, and Mohammed Baz <strong> “Transfer Learning for
                   Sentiment Analysis Using BERT Base Supervised Fine Tuning” </strong> in
@@ -489,7 +511,7 @@
 
             <div class="job-description p-2 ">
               <p>
-                [12]. Apurba Adhikary, Joy Bhuiya,
+                [13]. Apurba Adhikary, Joy Bhuiya,
                 <strong>Saydul Akbar Murad</strong>, Md. Bipul Hossain, K. M.
                 Aslam Uddin,MD Estihad Faysal, Abidur Rahaman, Anupam Kumar
                 Bairagi <strong> “Performance Evaluation of Micro Lens Arrays:
@@ -513,7 +535,7 @@
 
             <div class="job-description p-2 ">
               <p>
-                [13]. <strong> Saydul Akbar Murad</strong>, ABU JAFAR MD
+                [14]. <strong> Saydul Akbar Murad</strong>, ABU JAFAR MD
                 MUZAHID and Apurba Adhikary <strong> “AI Powered Asthma Prediction
                 Towards Treatment Formulation: An Android App Approach” </strong> in
                 Intelligent Automation & Soft Computing. (2022) <strong>(IF 3.41) </strong>
@@ -550,6 +572,26 @@
             <h4><strong>Conference Publications </strong></h4>
           </div>
           <div class=" border border-primary col-lg-12">
+
+              <div class="job-description p-2 ">
+              <p>
+                [1]. Sindhuja Penchala, <strong> Saydul Akbar Murad </strong>, Indranil Roy, Bidyut Gupta, Nick Rahimi
+                <strong>“Unveiling Text Mining Potential: A Comparative Analysis of Document Classification Algorithms”</strong>. 
+                Proceedings of 39th International Conference on Computers and Their Applications.
+              </p>
+            </div>
+            <div>
+              <div class="pdf-button ">
+                <button onClick="openTab(this)" href="#" name="assets/files/con2024.pdf" type="button"
+                  class="btn btn-sm btn-outline-dark pdf-btn  pl-4 pr-4 mb-2">
+                  Pdf
+                </button>
+                <button type="button" class="btn btn-sm link-btn btn-outline-success pl-4 pr-4 mb-2">
+                  <a
+                    href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=JSlhN54AAAAJ&sortby=pubdate&citation_for_view=JSlhN54AAAAJ:dhFuZR0502QC">Link</a>
+                </button>
+              </div>
+            </div>
 
             <div class="job-description p-2 ">
               <p>
