--- a/index.html
+++ b/index.html
@@ -113,12 +113,18 @@
         <div class="section-title">
           <h2>About</h2>
           <p class="job-description">
-            Saydul Akbar Murad is a dedicated researcher currently pursuing his PhD in Computer Science at the University of Southern Mississippi, USA.
-             He has previously completed his master's degree in Malaysia and his undergraduate education in Bangladesh. 
-             He has experience as a lecturer at the International Islamic University Chittagong, Bangladesh. 
-             His current research focus is on Brain-Computer Interface (BCI), building upon his past work in P2P Communication and cloud computing. 
-             Additionally, Murad serves as an editor for the Journal of Computer Science, 
-            contributing his deep knowledge and expertise in the field.
+            Saydul Akbar Murad is a PhD student in the School of Computing Sciences 
+            and Computer Engineering at the University of Southern Mississippi, USA. 
+            His academic journey began with a Bachelor of Science in Information and Communication Engineering, 
+            from Noakhali Science and Technology University, Bangladesh. He further enhanced his academic 
+            credentials by obtaining a master's degree in Computer Science from the University Malaysia Pahang, 
+            Malaysia. Murad's research interests are primarily focused on Brain-Computer Interface (BCI), 
+            Neuroscience, Peer-to-Peer (P2P) Communication, and Cloud Computing. He has made significant 
+            contributions to these fields through extensive publications in various prestigious journals and conferences. 
+            His excellence in research was recognized with the Best Paper Award at the 8th International 
+            Conference on Computer and Communications Management. In addition to his research endeavors, 
+            Murad serves as an editor for the Journal of Computer Science, where he contributes his deep 
+            knowledge and expertise in the field.
           </p>
         </div>
 
@@ -227,7 +233,7 @@
               </div>
               <div>
                 <div class="pdf-button ">
-                  <button onClick="openTab(this)" href="#" name="assets/files/j-1.pdf" type="button"
+                  <button onClick="openTab(this)" href="#" name="assets/files/EEG_Review.pdf" type="button"
                     class="btn btn-sm btn-outline-dark pdf-btn pl-4 pr-4 mb-2">
                     Pdf
                   </button>
@@ -817,10 +823,57 @@
           <div class=" section-title1 mt-4 ml-2">
             <h4><strong>Book Chapter</strong></h4>
           </div>
+
           <div class=" border border-primary col-lg-12">
             <div class="job-description p-2 ">
               <p>
-                [1]. AKM Bahalul Haque, Tasfia Nausheen, Abdullah Al Mahfuj Shaan,
+                [1]. Nick Rahimi, <strong>Saydul Akbar Murad</strong>, Sarah B. Lee “Entrepreneurship 
+                Opportunities in Cybersecurity” in
+                Generating Entrepreneurial Ideas With AI
+              </p>
+            </div>
+            <div>
+              <div class="pdf-button ">
+                <button onClick="openTab(this)" href="#" name="assets/files/Entrepreneurship_Cybersecurity.pdf" type="button"
+                  class="btn btn-sm btn-outline-dark pdf-btn  pl-4 pr-4 mb-2">
+                  Pdf
+                </button>
+                <button type="button" class="btn btn-sm link-btn btn-outline-success pl-4 pr-4 mb-2">
+                  <a
+                      href="https://www.igi-global.com/chapter/entrepreneurship-opportunities-in-cybersecurity/351106">
+                      Link</a>
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <div class=" border border-primary col-lg-12">
+            <div class="job-description p-2 ">
+              <p>
+                [2]. <strong>Saydul Akbar Murad</strong>, Nick Rahimi, Indranil Roy, Bidyut Gupta “Security 
+                challenges in the Industrial Internet of Things (IIoT)” in
+                Quality Assessment and Security in Industrial Internet of Things
+              </p>
+            </div>
+            <div>
+              <div class="pdf-button ">
+                <button onClick="openTab(this)" href="#" name="assets/files/Entrepreneurship_Cybersecurity.pdf" type="button"
+                  class="btn btn-sm btn-outline-dark pdf-btn  pl-4 pr-4 mb-2">
+                  Pdf
+                </button>
+                <button type="button" class="btn btn-sm link-btn btn-outline-success pl-4 pr-4 mb-2">
+                  <a
+                      href="https://www.taylorfrancis.com/chapters/edit/10.1201/9781003530572-2/security-challenges-industrial-internet-things-iiot-saydul-akbar-murad-nick-rahimi-indranil-roy-bidyut-gupta">
+                      Link</a>
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <div class=" border border-primary col-lg-12">
+            <div class="job-description p-2 ">
+              <p>
+                [3]. AKM Bahalul Haque, Tasfia Nausheen, Abdullah Al Mahfuj Shaan,
                  and <strong>Saydul Akbar Murad</strong> “Security
                 Attack Analysis and Countermeasures in 5G IoT Technology” in
                 5G and Beyond 2022.
@@ -840,6 +893,8 @@
               </div>
             </div>
           </div>
+
+
         </div>
       </div>
     </section>
@@ -947,7 +1002,7 @@
             <div class="publication-item">
               <h4>Graduate Research Assistant</h4>
               <p class="job-description">
-                School of Computing Sciences & Engineering, University of Souther Mississippi. Currently, working to decode the human brain signal into text. 
+                School of Computing Sciences & Engineering, University of Southern Mississippi. Currently, working to decode the human brain signal into text. 
                 Besides I am working on Machine Learning in Cybersecurity and Blockchain system.
               </p>
               <p class="job-date">February 2023 – Present</p>
@@ -1023,6 +1078,9 @@
           <div class="col-lg-10" data-aos="fade-up">
             <ul>
               <li>
+                Best Proposal Project, The University of Southern Mississippi, USA. Grant amount: $500. 
+              </li>
+              <li>
                 Industrial GRANTS, supported by Kaneka Production, Malaysia. Grant amount: RM24000. 
               </li>
               <li>
@@ -1031,6 +1089,7 @@
               <li>
                 Master's Research Scholarship, funded by the MHE, Malaysia. Grant amount: RM21600. 
               </li>
+              </ul>Best Publication Award, UMP, Malaysia<li>
               <li>
                 Best Research Paper Award in the 9th International Conference
                 on Computer and Communications Management, ACM, 2020.
@@ -1038,11 +1097,8 @@
               <li>
                 3rd Place at NSTU Intra University Programming Contest 2016.
               </li>
-              <li>SUB Inter-University Programming Contest-2018 (Rank 6).</li>
-              <li>LU Inter-University Programming Contest-2017 (Rank 11).</li>
-              <li>
-                Best Final Year Project Supervised by Apurba Adhikari, 2019.
-              </li>
+              
+              
             </ul>
           </div>
         </div>
