--- a/index.html
+++ b/index.html
@@ -1087,7 +1087,7 @@
               <li>
                 Master's Research Scholarship, funded by the MHE, Malaysia. Grant amount: RM21600. 
               </li>
-              </ul>Best Publication Award, UMP, Malaysia<li>
+              </li> Best Publication Award, UMP, Malaysia <li>
               <li>
                 Best Research Paper Award in the 9th International Conference
                 on Computer and Communications Management, ACM, 2020.
