--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
               <p>
                 [1]. Nick Rahimi, <strong>Saydul Akbar Murad</strong>, Sarah B. Lee “Entrepreneurship 
                 Opportunities in Cybersecurity” in
-                Generating Entrepreneurial Ideas With AI
+                Generating Entrepreneurial Ideas With AI, IGI Global.
               </p>
             </div>
             <div>
@@ -850,7 +850,7 @@
               <p>
                 [2]. <strong>Saydul Akbar Murad</strong>, Nick Rahimi, Indranil Roy, Bidyut Gupta “Security 
                 challenges in the Industrial Internet of Things (IIoT)” in
-                Quality Assessment and Security in Industrial Internet of Things
+                Quality Assessment and Security in Industrial Internet of Things, CRC Press.
               </p>
             </div>
             <div>
@@ -1087,7 +1087,7 @@
               <li>
                 Master's Research Scholarship, funded by the MHE, Malaysia. Grant amount: RM21600. 
               </li>
-              </li> Best Publication Award, UMP, Malaysia <li>
+              <li> Best Publication Award, UMP, Malaysia </li>
               <li>
                 Best Research Paper Award in the 9th International Conference
                 on Computer and Communications Management, ACM, 2020.
