--- a/index.html
+++ b/index.html
@@ -1200,6 +1200,10 @@
                 </div>
                 <ul>
                   <li class="voluntary-li"> 
+                    <strong>Oral Presentation</strong>, at The University of Southern Mississippi, USA
+                    on The Topic of <strong>Decoding Brainwaves: A Hybrid Neural Network Approach for Translating EEG Signals into Text</strong> in 2024.
+                  </li>
+                  <li class="voluntary-li"> 
                     <strong>Oral Presentation</strong>, at 2023 10th International Conference on Internet of Things: Systems, Management and Security (IOTSMS), USA.
                   </li>
                   <li class="voluntary-li"> 
